# windforecast

./: .gitignore  README.md  README.rst  pyproject.toml  wind_data.csv
html/: 0_Cover.html  2_Prep.html  3_Train.html  4_Forecast.html
notebooks/: 0_Cover.ipynb  1_Explore.ipynb  2_Prep.ipynb  3_Train.ipynb  4_Forecast.ipynb  main.py
tests/: test_prevwind.py
