[tool.poetry]
name = "prevwind"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.5"
tensorflow = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^3.0.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
