[tool.poetry]
name = "windforecast"
version = "0.1.0"
description = ""
authors = ["Ettore Aquino<ettore@ettoreaquino.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.5"
tensorflow = "^2.5.0"
matplotlib = "^3.4.2"
plotly = "^5.1.0"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
